--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
   <h1>Todo List</h1>
 
   <div>
-    <button id="displayTodosButton">Add</button>
-    <button id="toggleAllButton">Toggle All</button>
+    <button onclick="handlers.displayTodos()">Display Todos</button>
+    <button onclick="handlers.toggleAll()">Toggle All</button>
   </div>
+  <div>
+     <button onclick="handlers.addTodo()">Add</button>
+     <input id="addTodoTextInput" type="text">
+   </div>
+   <div>
+     <button onclick="handlers.changeTodo()">Change Todo</button>
+     <input id="changeTodoPositionInput" type="number">
+     <input id="changeTodoTextInput" type="text">
+   </div>
+   <div>
+     <button onclick="handlers.deleteTodo()">Delete Todo</button>
+     <input id="deleteTodoPositionInput" type="number">
+   </div>
+    <div>
+     <button onclick="handlers.toggleCompleted()">Toggle Completed</button>
+     <input id="toggleCompletedPositionInput" type="number">
+   </div>
 
 
   <script src="/client.js"></script>
