--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <h1>Todo List</h1>
 
   <div>
-    <button onclick="handlers.displayTodos()">Display Todos</button>
     <button onclick="handlers.toggleAll()">Toggle All</button>
   </div>
   <div>
@@ -28,8 +27,10 @@
      <button onclick="handlers.toggleCompleted()">Toggle Completed</button>
      <input id="toggleCompletedPositionInput" type="number">
    </div>
+   <ul>
+   </ul>
 
 
-  <script src="/client.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
